--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ notebook==6.2.0
 numpy==1.19.5
 openpyxl==3.0.6
 packaging==20.8
-pandas==1.2.0
+pandas
 pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
@@ -95,4 +95,3 @@ webencodings==0.5.1
 widgetsnbextension==3.5.1
 xlrd==2.0.1
 yarl==1.1.0
-yfinance==0.1.55
