--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ notebook==6.2.0
 numpy==1.19.5
 openpyxl==3.0.6
 packaging==20.8
-pandas==1.2.0
+pandas
 pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
